--- a/.htaccess
+++ b/.htaccess
@@ -158,3 +158,4 @@ RewriteRule ^pechat_kartin_posterov_reprodukcij/$ pechat_kartin_posterov_reprodu
 
 RewriteRule ^ordena_i_medali/$ ordena_i_medali.php
 RewriteRule ^derevyannie_ramki/$ derevyannie_ramki.php
+RewriteRule ^plastikovye_ramki/$ plastikovye_ramki.php
