--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "rector/rector": "^0.17.1"
   },
   "require": {
-    "shuchkin/simplexls": "^0.10.3"
+    "shuchkin/simplexls": "^0.10.3",
+    "ext-gd": "*"
   }
 }
